[package]
name = "feos-pcsaft"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>", "Philipp Rehner <prehner@ethz.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation of PC-SAFT EoS and corresponding Helmholtz energy functional."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos-pcsaft"
keywords = ["physics", "thermodynamics", "equations_of_state", "phase_equilibria", "SAFT"]
categories = ["science"]
exclude = ["/.github/*", "*.ipynb", "/examples/*", "/parameters/*"]

[dependencies]
quantity = "0.5"
feos-core = { git = "https://github.com/feos-org/feos-core", branch = "state_vec" }
feos-dft = { git = "https://github.com/feos-org/feos-dft", branch = "v0.2.0" }
num-dual = "0.5"
num-traits = "0.2"
ndarray = { version = "0.15", features=["approx"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1.8"
lazy_static = "1.4"
numpy = { version = "0.16", optional = true }
pyo3 = { version = "0.16", optional = true }

[dev-dependencies]
approx = "0.4"

[features]
default = []
python = ["pyo3", "quantity/python", "feos-core/python", "feos-dft/python", "numpy"]
