[package]
name = "feos_pcsaft"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <prehner@ethz.ch"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantity = "0.5"
feos-core = { git = "https://github.com/feos-org/feos-core", branch = "state_vec" }
#feos-dft = { git = "https://github.com/feos-org/feos-dft", branch = "v0.2.0" }
feos-dft = { path = "../../feos-dft" }
feos-pcsaft = { path = "..", features = ["python"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.16"
