[package]
name = "feos_pcsaft"
version = "0.2.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <prehner@ethz.ch"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantity = "0.5"
feos-core = "0.2"
feos-dft = "0.2"
feos-pcsaft = { path = "..", features = ["python"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.16"
